--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,8 @@
 @tailwind utilities;
 
 * {
-    /* outline: 1px solid goldenrod; */
+    outline: 1px solid goldenrod;
+    transition: all 0.5s ease-out;
 }
 
 body {
